--- a/storefront/catalog/templates/catalog/index.html
+++ b/storefront/catalog/templates/catalog/index.html
@@ -121,6 +121,7 @@
   <button type="submit">Filter</button>
 </form>
 
+    <!-- Product listings -->
     {% if latest_products %}
     <ul>
       {% for product in latest_products %}
